--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -1,8 +1,14 @@
 \section{Discussion}
-The {\it random walker} reflexion ranking method was initially proposed by Caldarelli et al. \cite{caldarelli2012networks} to predict the ranking of countries in terms of GDP from their capabilities to produce and export products. They achieve reasonable correlation (Pearson correlation $corr \approx 0.4$ for $\alpha \approx 1.1$ and $\beta \approx 0.8$ ) between their method and the actual GDP ranking. We have reused and adapted the method to rank the expertise of editors and the quality of articles in ten categories of Wikipedia. We find that the rank correlation between our predictions and Grand Truth exogenous metrics is on average much higher with a distinction between articles and editors regarding their evolution as categories get further contributions. While the rank correlation of articles is stable over time for all categories, the correlation increases for editors as categories get more contributions. When calibrating the biases of the random walker method, we find that $\alpha=0$ and $\beta <0 $ for editors and $\alpha = b\cdot \beta + 1$ for articles, with  $\alpha <1 $ and $b$ varying for each category.
+We have reused and adapted the Caldarelli et al. \cite{caldarelli2012networks} method to rank the diversification of editors and the ubiquity of articles in twelve categories of Wikipedia. We find that the rank correlation between our predictions and grand truth exogenous metrics is on average much higher than in than the $0.4$ achieved in the macro-economics domain. \cite{caldarelli2012networks}. The large difference of correlations between the original application of the method and our results goes back to the problem of inferring {\it capabilities}. In macro-economics, there are circumstantial factors that influence a countries' capabilities. For instance, the geographical location of a country determines access to natural resources. For knowledge production there is no such factor: knowledge is an intangible asset. This might explain why the method fits better in the context of online open collaboration, even though we have used a vey rough input matrix with information only on whether an editor as modified a given article. It is also important to note that where we have measured the dependence between the bi-partite random walker model and the grand truth along two axes: editors and articles, while it is certainly more difficult to compute the GDP of a product, or a class of products in the economy. Editor and article rankings exhibit indeed different correlation evolution patterns. 
 
-A way to explain the large difference of correlations between the original application of the method and our results goes back to the problem of inferring {\it capabilities}. In macro-economics, there are circumstantial factors that influence a countries capabilities. For instance, the geographical location of a country determines access to natural resources. For knowledge production there is no such factor: knowledge is an intangible asset. This might explain why the method fits better in the context of online open collaboration, even though we have used a vey rough input matrix with information only on whether an editor as modified a given article. It is also important to note that where we have measured the dependence between the bi-partite random walker model and the Grand Truth along two axes : editors and articles, while it is certainly more difficult to compute the GDP of a product, or a class of products in the economy. Editor and article rankings exhibit indeed different correlation evolution patterns. This is striking because the method is reflexive and the same information is incorporated on both dimensions from the input matrix $\mathbf{M}$. While we have no definitive answer, we interpret this result in the following way: from Figure \ref{fig:triangle_matrix}, we see that there are usually more editors than articles for a category. This means that the probability for an article to get contributions early on is higher than the probability to find editors who have contributed to a lot of articles early. In other words, it takes more time to rightly rank editors because there are more compared to the number of articles in a given category.
+This is striking because the method is reflexive and the same information is incorporated on both dimensions from the input matrix $\mathbf{M}$. While we have no definitive answer, we interpret this result in the following way: from Figure \ref{fig:triangle_matrix}, we see that there are usually more editors than articles for a category. This means that the probability for an article to get contributions early on is higher than the probability to find editors who have contributed to a lot of articles early. In other words, it takes more time to rightly rank editors because there are more compared to the number of articles in a given category.
 
-The values $\alpha$ and $\beta$ calibrated from the bi-partite network walker model provide interesting insights on the way value is created on Wikipedia. For articles, $\alpha$ is smaller than one or negative, which means that better articles are made by less fit editors. As a counter example, we refer two or more power users fighting over a page and who can leave it worse than not being touched at all \cite{halfaker2013}.  $\beta$ varies between negative and positive values as a function of categories: for $\beta < 0$ articles are more fit if the editors have edited more articles, for $\beta > 0$ articles have a better quality if the editors have edited other articles of high quality. This suggests that the quality of articles in some categories relies more on the variety of contributions, and hence favor more knowledge circulation, while others require prime focus on quality.
+Again, the relative ease of predicting article ranks is shown by our calibration results. When calibrating the biases of the random walker method, we find that $\alpha=0$ for articles is very clear pattern. For editors we find a more varied solution space. In trying to maximize both predictions simultaneously, the difference between categories is only a function of $\beta$, the importance of article ubiquity to successful articles and editors. 
 
+From the Economics domain, ubiquity is seen as the "dis-quality" of a product. In Wikipedia that interpretation is more muddled. Some categories predicted best by high $\beta$, meaning that placing an emphasis on many editors touching an article is import to success. We chose "Category:Sexual acts" to see how a taboo category would fair. That articles and editors in "Category:Sexual acts"  achieve best success when many people edit is an unsurprising result then.
+
+Likewise we chose a Military history category, to inspect the performance  of the notoriously obsessive editors of "WikiProject:Military history". Here we find a maximizing $\beta = 0$, which means that editors and articles achieve no better success when they many people edit an article. That means that "single-handed" articles and editors are just as performant.
+
+Finally we find  that whether article ubiquity is a measure of quality or not is category dependent. With these two examples we find footing to propose to take our $\beta$ coefficient to be a proxy for the "collaborativeness," of a category. 
+ 
 
