--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -1,7 +1,7 @@
 \section{Results}
 For country-product bi-partite networks,  Caldarelli et al. \cite{caldarelli2012network} found that the ranking of countries correlates reasonably well with their ranking in terms of GDP, with Spearman correlation $\approx 0.4$ for calibration values $\alpha \approx 1.1$ and $\beta \approx 0.8$. Similarly, we studied the correlations of the article-editor ranking model with grand-truth exogenous values. We studied how these correlations evolve as more edits are contributed to a category of Wikipedia articles. Finally, we investigated the values of calibrated $\alpha$ and $\beta$ in the context of Wikipedia open collaboration.
 
-Figure \ref{fig:rhotime} shows the evolution of the maximum achievable rank correlation, Spearman $\rho$, between $\mathbf{w}^*_a$ versus $\mathbf{v}_a$ and $\mathbf{w}^*_e$ versus $\mathbf{v}_e$, respectively, as a function of time for each of the ten categories.  The maximum rank correlation is obtained by a grid search. In our visualizations we draw a contour around the areas in the top 95\textsuperscript{th} percentile.
+Figure \ref{fig:rhotime} shows the evolution of the maximum achievable rank correlation, Spearman $\rho$, between $\mathbf{w}^*_a$ versus $\mathbf{v}_a$ and $\mathbf{w}^*_e$ versus $\mathbf{v}_e$, respectively, as a function of time for each of the twelve categories.  The maximum rank correlation is obtained by a grid search. In our visualizations we draw a contour around the areas in the top 95\textsuperscript{th} percentile.
 The correlations are generally quite high ( $ 0.46 < \rho_e < 0.75$ with $\langle \rho_e\rangle = 0.64$ for editors and $0.57 < \rho_a < 0.91$ with $\langle \rho_a\rangle = 0.72$ ). Yet the rank correlations of editors remain overall smaller than rank correlations obtained for articles. This difference might be due to the roughness of the grand truth for editors $v_e$, expressed in labor-hours, compared to the quality of $v_a$, which is an aggregate measure of five precise quality metrics. Nevertheless, the correlation of editors' ranking with $v_e$ increases: $\rho_e$ exhibits a convex increase over time, suggesting that it takes time (i.e., lots of edits) to capture well the expertise of editors as well as for editors. 
 
 
