some changes to the paper

--- a/paper/sections/intro.tex
+++ b/paper/sections/intro.tex
@@ -3,8 +3,7 @@ As knowledge is increasingly produced collectively on collaborative platforms
 such as the Wikipedia Encyclopedia, Github for open source software code, or 
 Twitter for information filtering \cite{}, it becomes ever more important to 
 understand how high quality content can be achieved from the ``wisdom of 
-crowds". While  high quality can be achieved \cite{giles2005internet} and 
-complex problems solved \cite{cooper2010}, the fine-grained mechanisms of 
+crowds". While  high quality can in some case be achieved \cite{giles2005internet} and  complex problems solved \cite{cooper2010}, the fine-grained mechanisms of 
 performance remain largely unknown. It has been theorized that peer-
 production -- the labor organization underlying open collaboration -- emerges 
 from the availability of cheap communication means like the Internet, and relies 
