--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -27,12 +27,12 @@ In \ref{landscape} the simultaneous maximizing solution exists at $\alpha = 0, \
 We also find, as in the first two entries of \ref{tab:maxbeta}, that a maximizing $\beta$ may be $0$, in this case, the original \ref{HHalgo} algorithm would be just as predictive. 
 
 \begin{table}
-\end{table}
+%\end{table}
 \begin{tabular}{lll}
 \toprule
-                                       Category &   Spearman $\rho$ &  $\beta$ \\
+Category &  $\rho$ &  $\beta$ \\
 \midrule
-                         Bicycle parts &  0.8953 &     0 \\
+           Bicycle parts &  0.8953 &     0 \\
  Military history of the US &  0.5767 &     0 \\
                   Computability theory &  0.7748 &  0.32 \\
                American male novelists &  0.6729 &   0.4 \\
@@ -49,6 +49,7 @@ We also find, as in the first two entries of \ref{tab:maxbeta}, that a maximizin
 \caption{Maximizing values of $\beta$ when $\alpha = 0$, sorted by $\beta$.}
 \label{tab:maxbeta}
 \end{table}
+
 
 \begin{figure}[!t]
 \centering
