--- a/paper/tmaillart.bib
+++ b/paper/tmaillart.bib
@@ -9,6 +9,8 @@
     year = {1999}
 }
 
+
+
 @article{stanley2002,
     abstract = {{This article discusses some of the similarities between work being done by economists and by physicists seeking to contribute to economics. We also mention some of the differences in the approaches taken and seek to justify these different approaches by developing the argument that by approaching the same problem from different points of view, new results might emerge. In particular, we review two newly discovered scaling results that appear to be universal, in the sense that they hold for widely different economies as well as for different time periods: (i) the fluctuation of price changes of any stock market is characterized by a probability density function, which is a simple power law with exponent −4 extending over 102 SDs (a factor of 108 on the y axis); this result is analogous to the Gutenberg–Richter power law describing the histogram of earthquakes of a given strength; and (ii) for a wide range of economic organizations, the histogram shows how size of organization is inversely correlated to fluctuations in size with an exponent ≈0.2. Neither of these two new empirical laws has a firm theoretical foundation. We also discuss results that are reminiscent of phase transitions in spin systems, where the divergent behavior of the response function at the critical point (zero magnetic field) leads to large fluctuations.}},
     author = {Stanley, H. E. and Amaral, L. A. N. and Buldyrev, S. V. and Gopikrishnan, P. and Plerou, V. and Salinger, M. A.},
@@ -8722,6 +8724,16 @@ of innovation.}},
     title = {{How to use a Wiki in education: 'Wiki based effective constructive learning'}},
     url = {http://dx.doi.org/10.1145/1149453.1149479},
     year = {2006}
+}
+
+@inproceedings{jesus2009,
+    author = {Jesus, Rut. Schwartz, Martin. Sune, Lehman},
+    booktitle = {Proceedings of the 2009 international symposium on Wikis},
+    keywords = {education, wiki},
+    publisher = {ACM},
+    series = {WikiSym '09},
+    title = {{Bipartite Nework of Wikipedia's Article and Authors: a meso-level approach.}},
+    year = {2009}
 }
 
 @inproceedings{chen2005,
