--- a/paper/abstractNetSci2014.tex
+++ b/paper/abstractNetSci2014.tex
@@ -155,7 +155,7 @@ Now if we allow that portfolio size, the number of articles that an editor has t
 
 
 
-\clearpage
+%\clearpage
 \vspace{1cm}
 \bibliographystyle{abbrv}
 \bibliography{sigproc,tmaillart}  
