my edits to the paper

--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -58,6 +58,33 @@ Category &  $\rho$ &  $\beta$ \\
 \label{fig:landscape}
 \end{figure}
 
+
+\begin{equation}
+\begin{cases}
+\mathbf{w}_e^* \sim \mathbf{k}_e^{1-\beta}\\
+\mathbf{w}_a^* \sim \mathbf{k}_a \langle \mathbf{k}_e^{-\beta}\rangle_a
+\end{cases}
+\end{equation}
+
+This means that the expertise of an editor $\mathbf{w}_e$ is 
+
+\begin{itemize}
+  \item convex decreasing if $\beta > 1$
+  \item concave increasing if $0 < \beta < 1$
+  \item linear as a function of portfolio size if $\beta =0$
+  \item convex increasing if $\beta < 0$ (case not found)
+\end{itemize}
+
+
+This means that the quality of an article  $\mathbf{w}_a$ is a function of $\mathbf{k}_a$ linearly increasing and  $\langle\mathbf{k}_e^{-\beta}\rangle_a$, which is 
+
+\begin{itemize}
+  \item decreasing if $\beta > 0$ 
+  \item constant if $\beta = 0$
+  \item concave increasing when $ -1 < \beta < 0$ (not found)
+  \item convexe increasing when $ \beta < -1 $ (not found)
+\end{itemize}
+
 %\clearpage
 
 
