pushed almost last version

--- a/paper/tmaillart.bib
+++ b/paper/tmaillart.bib
@@ -733,7 +733,7 @@ constructive responses to these results.}},
 }
 
 @article{geiger2013,
-author = {R. Stuart Geiger and Aaron Halfaker.},
+author = {Geiger, Stuart R.  and Halfaker, Aaron },
     title = {{Using edit sessions to measure participation in wikipedia.}},
     doi = {10.1145/2441776.2441873},
     url = {http://www.stuartgeiger.com/cscw-sessions.pdf},
@@ -746,7 +746,7 @@ author = {R. Stuart Geiger and Aaron Halfaker.},
 author = {Warncke-Wang, M., Cosley, D., and Riedl, J. },
     title = {{Tell Me More: An Actionable Quality Model for Wikipedia}},
     url = {http://www-users.cs.umn.edu/~morten/publications/wikisym2013-tellmemore.pdf},
-    journal = {Preceedings of WikiSym '13},
+    journal = {Proceedings of WikiSym '13},
     publisher = {OpenSym}, 
     year = {2013}
 }
