fixed bibliography style

--- a/paper/abstractNetSci2014.tex
+++ b/paper/abstractNetSci2014.tex
@@ -134,7 +134,7 @@ Calibration of $\alpha$ and $\beta$ by maximizing rank-correlation with ground-t
 %
 
 
-\bibliographystyle{h-physrev}
+\bibliographystyle{Science}
 \bibliography{tmaillart}  
 
 \end{document}
